# job-radar-backend

./: README.md  async_parser.py  db_check.py  parser.py  pyproject.toml  schema.sql  sync_parser.py
src/: db_manager.py  parser.py
